# go-bazel-gazelle

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  main.go  run_docker.sh
