load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:prefix github.com/johanastborg/go-bazel-gazelle
gazelle(name = "gazelle")

go_library(
    name = "go-bazel-gazelle_lib",
    srcs = ["main.go"],
    importpath = "github.com/johanastborg/go-bazel-gazelle",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "go-bazel-gazelle",
    embed = [":go-bazel-gazelle_lib"],
    visibility = ["//visibility:public"],
)
