load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_binary")
load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# gazelle:prefix github.com/johanastborg/go-bazel-gazelle
gazelle(name = "gazelle")

go_library(
    name = "go-bazel-gazelle_lib",
    srcs = ["main.go"],
    importpath = "github.com/johanastborg/go-bazel-gazelle",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "go-bazel-gazelle",
    embed = [":go-bazel-gazelle_lib"],
    visibility = ["//visibility:public"],
)

platform_transition_binary(
    name = "go-bazel-gazelle_linux_arm64",
    binary = ":go-bazel-gazelle",
    target_platform = "@rules_go//go/toolchain:linux_arm64",
)

platform_transition_binary(
    name = "go-bazel-gazelle_linux_amd64",
    binary = ":go-bazel-gazelle",
    target_platform = "@rules_go//go/toolchain:linux_amd64",
)

pkg_tar(
    name = "app_layer",
    srcs = [":go-bazel-gazelle_linux_arm64"],
    package_dir = "/app",
)

pkg_tar(
    name = "app_layer_amd64",
    srcs = [":go-bazel-gazelle_linux_amd64"],
    package_dir = "/app",
)

oci_image(
    name = "image",
    architecture = "arm64",  # Matches current environment
    entrypoint = ["/app/go-bazel-gazelle"],
    env = {"PORT": "8080"},
    os = "linux",
    tars = [":app_layer"],
)

oci_image(
    name = "image_amd64",
    architecture = "amd64",
    entrypoint = ["/app/go-bazel-gazelle"],
    env = {"PORT": "8080"},
    os = "linux",
    tars = [":app_layer_amd64"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["go-bazel-gazelle:latest"],
)

go_test(
    name = "go-bazel-gazelle_test",
    size = "small",
    srcs = ["main_test.go"],
    embed = [":go-bazel-gazelle_lib"],
)

oci_push(
    name = "push_amd64",
    image = ":image_amd64",
    remote_tags = ["latest", "latest-amd64"],
    repository = "us-central1-docker.pkg.dev/gen-lang-client-0401240584/nisses-oci-stuff/go-bazel-gazelle",
)

oci_push(
    name = "push_arm64",
    image = ":image",
    remote_tags = ["latest-arm64"],
    repository = "us-central1-docker.pkg.dev/gen-lang-client-0401240584/nisses-oci-stuff/go-bazel-gazelle",
)

# Alias for convenience, defaults to amd64 for Cloud Run compatibility
alias(
    name = "push",
    actual = ":push_amd64",
)
